...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.singaporetech.hrapp.MainActivity">


    <TextView
        android:id="@+id/dateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="Placeholder"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toStartOf="@+id/helpButton"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <LinearLayout
...
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="2dp"
            android:background="@drawable/custom_map_border"
            android:paddingBottom="1dp">

            <fragment
                android:id="@+id/googleMap"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                tools:context=".MainActivity" />
        </LinearLayout>
...
            android:layout_marginBottom="10dp"
            android:background="@drawable/custom_border"

            >

            <TextView
                android:id="@+id/location_textView"
                android:layout_width="310dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:text=" "
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:maxWidth="40dp"
                android:maxHeight="40dp"
...
                app:srcCompat="@drawable/refresh" />

        </LinearLayout>


        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="1dp"
            android:orientation="horizontal"
            android:paddingLeft="1dp"
            android:paddingTop="1dp"
            android:paddingRight="1dp"
            android:paddingBottom="1dp">

            <RadioButton
                android:id="@+id/radioWork"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/radio_left_selector"
                android:button="@android:color/transparent"
                android:checked="true"
...
                android:text="@string/Work"
                android:textColor="@drawable/text_color_selector"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/radioWFH"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/radio_center_selector"
                android:button="@android:color/transparent"
                android:gravity="center|center_horizontal"
                android:text="@string/WFH"
                android:textColor="@drawable/text_color_selector"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/radioCustomerSite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/radio_right_selector"
                android:button="@android:color/transparent"
                android:gravity="center|center_horizontal"
...
                android:textColor="@drawable/text_color_selector"
                android:textSize="16sp"
                android:textStyle="bold" />
        </RadioGroup>

        <Button
            android:id="@+id/checkInButton"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="-3dp"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="2dp"
...
