<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/doplabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_of_purchase"
                android:textColor="#000000" />

            <Button
                android:id="@+id/buttonDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#888888"
                android:drawableRight="@android:drawable/ic_menu_my_calendar"
                android:text="@string/select_date"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewSelectedDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:text="@string/cmcategory"
                android:textColor="#000000" />

            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:spinnerMode="dropdown" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:text="@string/amount"
                android:textColor="#000000" />

            <me.abhinay.input.CurrencyEditText
                android:id="@+id/editTextAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Input Value"
                android:inputType="number" />

            <TextView
                android:id="@+id/textViewReceiptNumLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:text="@string/receiptnum"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/editTextNumberReceiptNum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Input Receipt Number"
                android:inputType="number" />

            <TextView
                android:id="@+id/textViewRemarksLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:text="@string/remarks"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/editTextRemarks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Input Remarks"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textViewUploadReceiptLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:text="@string/upload_receipt"
                android:textColor="#000000" />

            <Button
                android:id="@+id/buttonChooseFile"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#888888"
                android:text="@string/choose_a_file" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="400dp"
                android:adjustViewBounds="true"
                android:layout_gravity="center"
                tools:srcCompat="@tools:sample/avatars" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingTop="30dp"
                android:paddingBottom="150dp">

                <Button
                    android:id="@+id/buttonClose"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_margin="15dp"
                    android:layout_weight="1"
                    android:backgroundTint="#FFFFFF"
                    android:text="@string/close"
                    android:textColor="#000000" />

                <Button
                    android:id="@+id/buttonSubmit"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_margin="15dp"
                    android:layout_weight="1"
                    android:backgroundTint="#3F73FB"
                    android:text="@string/submit"
                    android:textColor="#000000" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>